# deepseek-code

./: .env.example  .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  CTRL_C_FIXED.md  ENHANCEMENTS.md  FEATURES.md  FINAL_INTERFACE.md  FIX_MODEL_SELECTION.md  GRAND_INTRO.md  LICENSE  NEW_FEATURES.md  PERSISTENT_STATUS_BAR.md  PROFESSIONAL_OUTPUT.md  README.md  VISUAL_COMPARISON.md  VISUAL_SUMMARY.md  debug_glob.py  demo_ui.py  orchestrator.py  pyproject.toml  test_model_ui.py
docs/archive/: BOXED_INPUT.md  INTERACTIVE_MODEL_SELECTOR.md  MODEL_SELECTION_GUIDE.md  PLAN_MODE_DESIGN.md  ROADMAP.md  TYPO_FIXED.md
scripts/: demo_ui.py
src/deepseek_code/: agent.py  cli.py  config.py  context.py  engine.py  llm_client.py  logging_utils.py  orchestrator.py  orchestrator_schemas.py  safety.py  session.py  tokens.py  tools.py  tools_adapter.py
src/deepseek_code/ui/: __init__.py  animations.py  approval.py  approval_selector.py  commands.py  model_selector.py  panels.py  theme_selector.py  themes.py  tui.py  tui_engine.py
tests/: test_comprehensive.py  test_enhancements.py  test_safety.py
