[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-code"
version = "0.2.1"
description = "Terminal coding agent powered by DeepSeek API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "DeepSeek Team", email = "code@deepseek.com"}]
keywords = ["ai", "coding", "terminal", "agent", "deepseek", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "tiktoken>=0.7",
    "ijson>=3.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "mypy>=1.8",
    "ruff>=0.1",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/deepseek/deepseek-code"
Documentation = "https://github.com/deepseek/deepseek-code#readme"
Repository = "https://github.com/deepseek/deepseek-code.git"
Issues = "https://github.com/deepseek/deepseek-code/issues"
Changelog = "https://github.com/deepseek/deepseek-code/blob/main/CHANGELOG.md"

[project.scripts]
deepseek = "deepseek_code.cli:main"
deepseek-code = "deepseek_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deepseek_code = ["py.typed"]

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src/deepseek_code"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF (Linting & Formatting)
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "ARG001", # unused function argument
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["deepseek_code"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY (Type Checking)
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

